# contract-cli

./: .gitignore  .gitignore.private  .gitignore.public  Cargo.toml  README.md
src/: contract.rs  lib.rs  main.rs
src/db/: mod.rs  run_migrations.rs
src/migration_files/: m_20240414_001_initial_schema.sql  m_20240414_002_data_transform.rs  m_20240414_003_cleanup.sql  mod.rs
src/utils/: hash.rs
