[package]
name = "contract-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = "0.34"
anyhow = "1.0.97"
sha2 = "0.10.8" 
hex = "0.4.3"
log = "0.4"
env_logger = "0.10"

# for fast CSV/Parquet/JSON ETL & profiling
polars = { version = "0.38", features = ["csv", "parquet", "lazy"] }
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon  = "1.7"      # parallel iterators
dotenv = "0.15"     # config from .env

[features]
default = ["public"]
public = []
private = []
